# basic-udev

./: Cargo.toml
basic-udev/: Cargo.toml  README.md
basic-udev/src/: lib.rs
udev/: Cargo.toml  README.md
udev/src/: lib.rs
