[package]
name = "udev"
version = "0.8.0"
edition = "2021"
authors = ["Sean Cross <sean@xobs.io>"]
description = "A shim to allow using basic-udev"
repository = "https://github.com/xobs/basic-udev"
license = "MIT OR Apache-2.0"
keywords = ["udev"]

[dependencies]
basic-udev = { path = "../basic-udev" }